--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
-spring.application.name=demo1
-server.address=127.0.0.1
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/esc?serverTimezone=UTC&characterEncoding=UTF-8
+spring.application.name=esc
+spring.datasource.url=jdbc:mysql://esc-club-db.czc64ea20ehq.ap-northeast-2.rds.amazonaws.com/esc
 spring.datasource.username=esc
 spring.datasource.password=esc1234!!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view= false
+
 jwt.secret=OQw5JcW5NkaM2YpQF9HjUYtjRU3JZpE8kBz3aXnN3jA=
 jwt.expirationMs=3600000
 
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.open-in-view= false
-
-#spring.datasource.url=jdbc:mysql://esc-club-db.czc64ea20ehq.ap-northeast-2.rds.amazonaws.com
-#spring.datasource.username=esc
-#spring.datasource.password=esc1234!!
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
